# jxr-auto-cleaner

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  HDR_and_JXR_Study.md  JXR_Cleanup_Service_Plan.md  LICENSE  README.md  RELEASE_NOTES.md  setup.bat
installer/: Package.wxs  license.rtf
src/: Converter.cpp  Converter.h  FileWatcher.cpp  FileWatcher.h  SystemCheck.cpp  SystemCheck.h  ThreadSafeQueue.h  Utils.h  main.cpp  resource.h  resources.rc
